2008-08-23

  Fixed some potential buffer overruns; thanks to Ivan Yanikov for the
  patches. [Haeleth]


2008-07-04

  Added return value 4 in "isskip" command for whole page mode. [Mion]

  Changed refreshSurface with windowback mode to draw a z-order sprite 
  in front of the tachie but behind the textwindow;
  Added windowchip handling to refreshSurface. [Mion]

  Added "textbtnoff" command, fixed textbtn handling & updated test.
  [Mion]

  
2008-07-03

  Fixed a bug in game loading, where if a game was running and had
  pages in the lookback buffer, subsequently loading a saved game
  with no pages wouldn't properly "clear" the existing lookback buffer.
  [Mion]

  
2008-06-27

  Added "textbtnstart", "linkcolor", "gettextbtnstr", "erasetextbtn",
  and "textexbtn" commands, along with support for textbuttons
  (using "<>"). [Mion]

  Added tracking of text colors on current page. [Mion]


2008-06-19

  Added support for pretextgosub tags (using "[]") [Mion]

  Added support for in-text variable assignment (using "{}"). [Mion]


2008-06-14

  Added emulation of "cascade" dll plugin effect. [Mion]


2008-06-10

  Reworked text buffer processing to do proper text placement when
  locate commands were used. [Mion]


2008-04-04

  Added "addkinsoku" and "setkinsoku" commands [Mion]

  Reworked text processing to allow a mix of 1-byte & 2-byte chars,
  use better English space-based linebreaking and Japanese kinsoku-based
  linebreaking. [Mion]


2008-03-29

  Add filename-based language selection: if the executable is named
  "onscripter-en" (or "ONScripter-En", "onscripter_english", etc), it
  will use English mode by default. [Haeleth]


2008-03-22

  Implement clickskippage, and also add a debugprint command that
  dumps its parameters to stdout for convenient printf-style
  debugging. [Haeleth]

  Add a rudimentary test suite; this is far from complete, but will
  hopefully help a bit in making sure future updates don't break
  anything. [Haeleth]
