@@ -414,10 +414,10 @@ void ONScripterLabel::mousePressEvent( SDL_MouseButtonEvent *event )
     current_button_state.down_flag = false;
     skip_mode &= ~SKIP_NORMAL;
 
-    if ( event->button == SDL_BUTTON_RIGHT &&
-         event->type == SDL_MOUSEBUTTONUP &&
-         (rmode_flag && event_mode & WAIT_TEXT_MODE ||
-          event_mode & WAIT_BUTTON_MODE) ){
+    if ( (event->button == SDL_BUTTON_RIGHT) &&
+         (event->type == SDL_MOUSEBUTTONUP) &&
+         ((rmode_flag && (event_mode & WAIT_TEXT_MODE)) ||
+          (event_mode & WAIT_BUTTON_MODE)) ){
         current_button_state.button = -1;
         volatile_button_state.button = -1;
         if (event_mode & WAIT_TEXT_MODE){
@@ -442,18 +442,18 @@ void ONScripterLabel::mousePressEvent( SDL_MouseButtonEvent *event )
             current_button_state.down_flag = true;
     }
 #if SDL_VERSION_ATLEAST(1, 2, 5)
-    else if (event->button == SDL_BUTTON_WHEELUP &&
-             (event_mode & WAIT_TEXT_MODE ||
-              usewheel_flag && event_mode & WAIT_BUTTON_MODE ||
-              system_menu_mode == SYSTEM_LOOKBACK)){
+    else if ((event->button == SDL_BUTTON_WHEELUP) &&
+             ((event_mode & WAIT_TEXT_MODE) ||
+              (usewheel_flag && (event_mode & WAIT_BUTTON_MODE)) ||
+              (system_menu_mode == SYSTEM_LOOKBACK))){
         current_button_state.button = -2;
         volatile_button_state.button = -2;
         if (event_mode & WAIT_TEXT_MODE) system_menu_mode = SYSTEM_LOOKBACK;
     }
     else if ( event->button == SDL_BUTTON_WHEELDOWN &&
-              (enable_wheeldown_advance_flag && event_mode & WAIT_TEXT_MODE ||
-               usewheel_flag && event_mode & WAIT_BUTTON_MODE||
-               system_menu_mode == SYSTEM_LOOKBACK ) ){
+              ((enable_wheeldown_advance_flag && (event_mode & WAIT_TEXT_MODE)) ||
+               (usewheel_flag && (event_mode & WAIT_BUTTON_MODE)) ||
+               (system_menu_mode == SYSTEM_LOOKBACK)) ){
         if (event_mode & WAIT_TEXT_MODE){
             current_button_state.button = 0;
             volatile_button_state.button = 0;
@@ -744,14 +744,15 @@ void ONScripterLabel::keyPressEvent( SDL_KeyboardEvent *event )
         return;
     }
 
-    if ( event_mode & WAIT_BUTTON_MODE &&
-         ((event->type == SDL_KEYUP || btndown_flag) &&
-          (!getenter_flag  && event->keysym.sym == SDLK_RETURN  ||
-           !getenter_flag  && event->keysym.sym == SDLK_KP_ENTER ) ||
-	  (spclclk_flag || !useescspc_flag) && event->keysym.sym == SDLK_SPACE) ){
-	if ( event->keysym.sym == SDLK_RETURN ||
-	     event->keysym.sym == SDLK_KP_ENTER ||
-	     spclclk_flag && event->keysym.sym == SDLK_SPACE ){
+    if ( (event_mode & WAIT_BUTTON_MODE) &&
+         (((event->type == SDL_KEYUP || btndown_flag) &&
+           ((!getenter_flag  && event->keysym.sym == SDLK_RETURN)  ||
+            (!getenter_flag  && event->keysym.sym == SDLK_KP_ENTER) ))
+          || ((spclclk_flag || !useescspc_flag) &&
+              event->keysym.sym == SDLK_SPACE)) ){
+	if ( (event->keysym.sym == SDLK_RETURN) ||
+	     (event->keysym.sym == SDLK_KP_ENTER) ||
+	     (spclclk_flag && (event->keysym.sym == SDLK_SPACE)) ){
 	    current_button_state.button = current_over_button;
 	    volatile_button_state.button = current_over_button;
 	    if ( event->type == SDL_KEYDOWN )
@@ -786,20 +787,22 @@ void ONScripterLabel::keyPressEvent( SDL_KeyboardEvent *event )
         else if ( !spclclk_flag && useescspc_flag && event->keysym.sym == SDLK_SPACE ){
             current_button_state.button  = -11;
         }
-        else if ((!getcursor_flag && event->keysym.sym == SDLK_LEFT ||
-                  event->keysym.sym == SDLK_h) &&
-                 (event_mode & WAIT_TEXT_MODE ||
-                  usewheel_flag && !getcursor_flag && event_mode & WAIT_BUTTON_MODE || 
-                  system_menu_mode == SYSTEM_LOOKBACK)){
+        else if (((!getcursor_flag && (event->keysym.sym == SDLK_LEFT)) ||
+                  (event->keysym.sym == SDLK_h)) &&
+                 ((event_mode & WAIT_TEXT_MODE) ||
+                  (usewheel_flag && !getcursor_flag &&
+                   (event_mode & WAIT_BUTTON_MODE)) || 
+                  (system_menu_mode == SYSTEM_LOOKBACK))){
             current_button_state.button = -2;
             volatile_button_state.button = -2;
             if (event_mode & WAIT_TEXT_MODE) system_menu_mode = SYSTEM_LOOKBACK;
         }
-        else if ((!getcursor_flag && event->keysym.sym == SDLK_RIGHT ||
-                  event->keysym.sym == SDLK_l) &&
-                 (enable_wheeldown_advance_flag && event_mode & WAIT_TEXT_MODE ||
-		  usewheel_flag && event_mode & WAIT_BUTTON_MODE||
-                  system_menu_mode == SYSTEM_LOOKBACK)){
+        else if (((!getcursor_flag && (event->keysym.sym == SDLK_RIGHT)) ||
+                  (event->keysym.sym == SDLK_l)) &&
+                 ((enable_wheeldown_advance_flag &&
+                   (event_mode & WAIT_TEXT_MODE)) ||
+		  (usewheel_flag && (event_mode & WAIT_BUTTON_MODE)) ||
+                  (system_menu_mode == SYSTEM_LOOKBACK))){
             if (event_mode & WAIT_TEXT_MODE){
                 current_button_state.button = 0;
                 volatile_button_state.button = 0;
@@ -809,17 +812,17 @@ void ONScripterLabel::keyPressEvent( SDL_KeyboardEvent *event )
                 volatile_button_state.button = -3;
             }
         }
-	else if ((!getcursor_flag && event->keysym.sym == SDLK_UP ||
-                  event->keysym.sym == SDLK_k ||
-                  event->keysym.sym == SDLK_p) &&
-                 event_mode & WAIT_BUTTON_MODE){
+	else if (((!getcursor_flag && (event->keysym.sym == SDLK_UP)) ||
+                  (event->keysym.sym == SDLK_k) ||
+                  (event->keysym.sym == SDLK_p)) &&
+                 (event_mode & WAIT_BUTTON_MODE)){
             shiftCursorOnButton(1);
             return;
         }
-        else if ((!getcursor_flag && event->keysym.sym == SDLK_DOWN ||
-                  event->keysym.sym == SDLK_j ||
-                  event->keysym.sym == SDLK_n) &&
-                 event_mode & WAIT_BUTTON_MODE){
+        else if (((!getcursor_flag && (event->keysym.sym == SDLK_DOWN)) ||
+                  (event->keysym.sym == SDLK_j) ||
+                  (event->keysym.sym == SDLK_n)) &&
+                 (event_mode & WAIT_BUTTON_MODE)){
             shiftCursorOnButton(-1);
             return;
         }
@@ -829,8 +832,8 @@ void ONScripterLabel::keyPressEvent( SDL_KeyboardEvent *event )
         else if ( getpagedown_flag && event->keysym.sym == SDLK_PAGEDOWN ){
             current_button_state.button  = -13;
         }
-        else if ( getenter_flag && event->keysym.sym == SDLK_RETURN ||
-                  getenter_flag && event->keysym.sym == SDLK_KP_ENTER ){
+        else if ( (getenter_flag && (event->keysym.sym == SDLK_RETURN)) ||
+                  (getenter_flag && (event->keysym.sym == SDLK_KP_ENTER)) ){
             current_button_state.button  = -19;
         }
         else if ( gettab_flag && event->keysym.sym == SDLK_TAB ){
